packages/nicolium/src/styles/components.scss
/* ... */
@keyframes spinner {
  0% {
    opacity: 1;
  }

  100% {
    opacity: 0;
  }
}

.code-block {
  position: relative;

  > label {
    input {
      display: none;
    }

    .icon {
      position: absolute;
      z-index: 10;
      top: 0.5rem;
      right: 0.5rem;

      padding: 0.25rem;
      border-radius: var(--radius-md);

      color: var(--color-gray-800);

      opacity: 0;
      background-color: var(--color-gray-200);

      transition: opacity 150ms var(--ease-default);

      .dark & {
        color: var(--color-gray-200);
        background-color: var(--color-primary-900);
      }

      &:hover {
        background-color: var(--color-gray-300);

        .dark & {
          background-color: #000;
        }
      }

      svg {
        width: 1.5rem;
        height: 1.5rem;
      }
    }
  }

  &:has(> label input:checked) {
    > label .icon {
      opacity: 0.3;
    }
  }

  &:hover, &:focus {
    > label .icon {
      opacity: 1 !important;
    }
  }

  &:has(> label input:checked) {
    pre {
      text-wrap: wrap;
    }
  }
}

.outline-box {
  padding: 1rem;
  border: 1px solid var(--color-gray-300);
  border-radius: var(--radius-lg);

  .dark & {
    border: 1px solid var(--color-gray-800);
  }
}

.still-image {
  isolation: isolate;
  position: relative;

  &--hover-to-play {
    .still-image__image {
      opacity: 0;
    }

    &:hover,
    .status-reactions-bar__button:hover & {
      .still-image__image {
        animation: still-image-show-awaited 1s forwards;
      }

      .still-image__static-image {
        animation: still-image-hide-awaited 1s forwards;
      }
    }
  }

  &__static-image {
    position: absolute;
    top: 0;
    opacity: 1;
  }

  &:hover .extension-badge__container {
    opacity: 0;
  }

  img,
  canvas {
    display: block;
    width: 100%;
    height: 100%;
    object-fit: cover;
  }

  canvas {
    pointer-events: none;
  }

  &--letterboxed img {
    object-fit: contain;
  }
}

@keyframes still-image-show-awaited {
  0% {
    opacity: 0;
  }

  50% {
    opacity: 0;
  }

  50.01% {
    opacity: 1;
  }

  100% {
    opacity: 1;
  }
}

@keyframes still-image-hide-awaited {
  0% {
    opacity: 1;
  }

  50% {
    opacity: 1;
  }

  50.01% {
    opacity: 0;
  }

  100% {
    opacity: 0;
  }
}

.extension-badge {
  display: inline-flex;
  align-items: center;

  padding: 0.125rem 0.5rem;
  border-radius: var(--radius-sm);

  font-size: var(--text-xs);
  font-weight: 500;
  line-height: var(--leading-xs);
  color: var(--color-gray-900);

  background: var(--color-gray-100);

  .dark & {
    color: var(--color-gray-100);
    background: var(--color-gray-800);
  }

  &__container {
    pointer-events: none;

    position: absolute;
    bottom: 0.5rem;
    left: 0.5rem;

    opacity: 0;
  }
}

.crypto-address {
  display: flex;
  flex-direction: column;
  gap: 0.25rem;

  &__label {
    display: flex;
    gap: 0.5rem;
    align-items: center;

    p {
      @include mixins.text($weight: bold);

      flex-grow: 1;
    }
  }

  &__icon {
    display: flex;
    align-items: start;
    justify-content: center;
    width: 1.5rem;
  }

  > p {
    @include mixins.text;
  }

  button {
    color: var(--color-gray-500);
  }
}

.detailed-crypto-address {
  display: flex;
  flex-direction: column;

  &__label {
    display: flex;
    gap: 0.625rem;
    align-items: center;
    margin-bottom: 0.375rem;

    div {
      font-weight: bold;
    }
  }

  &__icon {
    display: flex;
    align-items: start;
    justify-content: center;
    width: 1.5rem;

    svg {
      width: 100%;
    }
  }

  &__note {
    margin-top: 0.625rem;
  }

  &__qr {
    display: flex;
    align-items: center;
    justify-content: center;

    margin-bottom: 0.75rem;
    padding: 0.625rem;

    canvas {
      border-radius: var(--radius-lg);
    }
  }
}

.copyable-input {
  display: flex;
  align-items: center;
  min-width: 0;

  .input__wrapper {
    flex-grow: 1;
    min-width: 0;
  }

  input {
    border-radius: var(--radius-lg) 0 0 var(--radius-lg);

    [dir='rtl'] & {
      border-radius: 0 var(--radius-lg) var(--radius-lg) 0;
    }
  }

  button {
    @include mixins.button($theme: primary);

    height: 100%;
    margin-top: 0.25rem;
    border-radius: 0 var(--radius-lg) var(--radius-lg) 0;

    [dir='rtl'] & {
      border-radius: var(--radius-lg) 0 0 var(--radius-lg);
    }
  }
}

.announcement {
  display: flex;
  flex-direction: column;
  gap: 0.5rem;
  width: 100%;

  &__container {
    padding: 0.75rem 0;
    border-bottom: 1px solid var(--color-gray-200);

    .dark & {
      border-color: var(--color-gray-800);
    }

    &:last-child {
      border-bottom: none;
    }
  }

  &__time {
    @include mixins.text($theme: muted);
  }

  &__content {
    font-size: var(--text-sm);

    [dir='ltr'] & {
      margin-left: 0;
    }

    [dir='rtl'] & {
      margin-right: 0;
    }
  }
}

.empty-column-indicator {
  display: flex;
  flex: 1 1 0%;
  align-items: center;
  justify-content: center;

  min-height: 10rem;
  border-radius: var(--radius-lg);

  color: var(--color-gray-900);
  text-align: center;

  background-color: var(--color-primary-50);

  .dark & {
    color: var(--color-gray-100);
    background-color: var(--color-primary-700);
  }

  & > span {
    max-width: 400px;
  }

  a {
    color: var(--color-primary-600);
    text-decoration: none;

    .dark & {
      color: var(--color-primary-400);
    }

    &:hover {
      text-decoration: underline;
    }
  }
}

.load-gap {
  display: block;

  box-sizing: border-box;
  width: 100%;
  margin: 0;
  padding: 1rem;
  border: 0;

  color: var(--color-gray-900);

  background: transparent;

  svg {
    width: 1rem;
    height: 1rem;
    margin: 0 auto;
  }
}
/* ... */

